# etax

./: .pre-commit-config.yaml  API_DATA_DETAILS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_MAPPING_STRATEGY.md  ENTITY_CONSOLIDATION.md  ERPNEXT_INTEGRATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  README.md  SECURITY.md  SHARED_DATA_ARCHITECTURE.md  TRANSACTION_CONSOLIDATION.md  mkdocs.yml  pyproject.toml  ruff.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  docs.yml  linter.yml  pr-check.yml  release.yml  semantic-release.yml  stale.yml  typecheck.yml
docs/: api.md  changelog.md  configuration.md  index.md  installation.md
etax/: __init__.py  exceptions.py  hooks.py  logger.py  mn_entity.py  modules.txt  performance.py
etax/api/: __init__.py  auth.py  batch.py  cache.py  client.py  health.py  http_client.py  pool.py  resilient_client.py  signature.py  transformer.py
etax/etax/: telemetry.py
etax/etax/doctype/etax_approval_log/: etax_approval_log.json  etax_approval_log.py
etax/etax/doctype/etax_invoice_link/: __init__.py  etax_invoice_link.js  etax_invoice_link.json  etax_invoice_link.py  etax_invoice_link_list.js
etax/etax/doctype/etax_report/: etax_report.json  etax_report.py
etax/etax/doctype/etax_report_data_item/: etax_report_data_item.json  etax_report_data_item.py
etax/etax/doctype/etax_settings/: etax_settings.js  etax_settings.json  etax_settings.py
etax/etax/doctype/etax_submission_log/: etax_submission_log.json  etax_submission_log.py
etax/etax/doctype/etax_taxpayer/: __init__.py  etax_taxpayer.json  etax_taxpayer.py
etax/fixtures/: etax_notifications.json  etax_roles.json  etax_workflow.json  etax_workflow_states.json
etax/integrations/: __init__.py  journal_entry.py  purchase_invoice.py  sales_invoice.py
etax/setup/: __init__.py  indexes.py  install.py
etax/tasks/: __init__.py  certificate.py  daily.py
etax/tests/: __init__.py  test_battle_utilities.py  test_etax.py  test_integrations.py  test_signature.py
etax/translations/: mn.csv
etax/utils/: __init__.py  background.py  company.py  config.py  idempotency.py  logging.py  metrics.py  resilience.py  testing.py  validators.py
