[project]
name = "etax"
version = "1.3.0"
authors = [
    { name = "Digital Consulting Service LLC (Mongolia)", email = "dev@frappe.mn" }
]
description = "eTax Mongolian Tax Reporting System Integration for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "GPL-3.0" }
keywords = ["frappe", "erpnext", "etax", "mongolia", "tax", "reporting", "mta"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Frappe",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[project.urls]
Homepage = "https://github.com/mn-frappe/etax"
Documentation = "https://github.com/mn-frappe/etax#readme"
Repository = "https://github.com/mn-frappe/etax.git"
Issues = "https://github.com/mn-frappe/etax/issues"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B015",  # Useless comparison
    "B017",  # assertRaises(Exception) - should be more specific
    "B018",  # useless expression, not assigned to anything
    "B023",  # function doesn't bind loop variable
    "B904",  # raise inside except without from
    "E101",  # indentation contains mixed spaces and tabs
    "E402",  # module level import not at top of file
    "E501",  # line too long
    "E741",  # ambiguous variable name
    "F401",  # unused imports
    "F403",  # can't detect undefined names from * import
    "F405",  # can't detect undefined names from * import
    "F722",  # syntax error in forward type annotation
    "RUF001",  # Cyrillic characters (valid for Mongolian)
    "RUF002",  # Cyrillic in docstrings
    "RUF012",  # Mutable class defaults
    "RUF022",  # __all__ sorting
    "W191",  # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
